<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#263238"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.example.android.sudokusolver.SudokuGrid
        android:id="@+id/sudoku_grid"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/labels"
        app:layout_constraintBottom_toBottomOf="parent"
        app:filledCellColor="@color/sudokuCellFilled"
        app:wrongCellColor="@color/sudokuCellwrong"
        app:permanentCellColor="@color/sudokuCellFilled"
        app:rightCellColor="@color/sudokuCellFilled"
        app:currentCellColor="@color/sudokuCellFilled"
        android:textSize="12sp"/>
        <LinearLayout
            android:id="@+id/labels"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/sudoku_grid"
            android:orientation="vertical">
            <TextView
                android:id="@+id/difficulty_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/difficulty_level"
                android:textColor="#FAFAFA"/>
            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/status"
                android:textColor="#FAFAFA"/>
            <TextView
                android:id="@+id/wrong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/wrongCount"
                android:textColor="#FAFAFA"/>
            <TextView
                android:id="@+id/hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/hintCount"
                android:textColor="#FAFAFA"/>
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>