<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#212121"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_card"
        android:id="@+id/play_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ninja_panda"
                android:layout_gravity="right"/>

            <Button
                android:id="@+id/sudoku_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_button"
                android:layout_marginTop="10dp"
                android:text="@string/solve_sudoku"
                android:textSize="15sp"
                android:layout_gravity="center_horizontal"
                android:textColor="#FAFAFA"/>

            <Button
                android:id="@+id/solve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_button"
                android:layout_gravity="center_horizontal"
                android:textSize="15sp"
                android:text="@string/Start_solver"
                android:layout_marginBottom="10dp"
                android:textColor="#FAFAFA"/>
        </LinearLayout>
    </FrameLayout>
    <ImageView
        android:id="@+id/sudoku_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/play_card"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/sudoku_name"
        android:layout_marginTop="20dp"/>
    <ImageButton
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/info"
        android:layout_margin="10dp"
        android:src="@drawable/ic_history"
        android:background="?android:attr/selectableItemBackground"/>
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"
        android:background="@drawable/ic_info_frame"
        android:id="@+id/fragment_frame">
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:padding="10dp"
                android:textSize="20sp"
                android:text="@string/info"/>
        </ScrollView>
    </FrameLayout>
    <FrameLayout
        android:id="@+id/difficulty_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_card"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:id="@+id/easy_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/easy"
                android:background="@drawable/ic_button"
                android:layout_margin="10dp"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:textColor="#FAFAFA"/>
            <Button
                android:id="@+id/medium_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium"
                android:background="@drawable/ic_button"
                android:layout_margin="10dp"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:textColor="#FAFAFA"/>
            <Button
                android:id="@+id/hard_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hard"
                android:background="@drawable/ic_button"
                android:layout_margin="10dp"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:textColor="#FAFAFA"/>
        </LinearLayout>
    </FrameLayout>
    <ImageButton
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="10dp"
        android:src="@drawable/info_bright"
        android:background="?android:attr/selectableItemBackground"/>

</androidx.constraintlayout.widget.ConstraintLayout>