<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#263238"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SolverActivity">
        <com.example.android.sudokusolver.SudokuGrid
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sudoku_grid"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:filledCellColor="@color/sudokuCellFilled"
            app:wrongCellColor="@color/sudokuCellwrong"
            app:rightCellColor="@color/sudokuCellFilled"
            app:permanentCellColor="@color/sudokuCellFilled"
            app:currentCellColor="@color/sudokuCellSelected"
            android:layout_margin="10dp"/>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_card"
            android:id="@+id/solve_card"
            app:layout_constraintTop_toBottomOf="@id/sudoku_grid"
            app:layout_constraintLeft_toRightOf="@id/eraser"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/number_panel">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ninja_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ninja"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
                <Button
                    android:id="@+id/hint_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/ic_button"
                    android:textSize="15sp"
                    android:text="@string/hint"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/solve_it"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/ninja_image"
                    android:textColor="#FAFAFA"/>
                <Button
                    android:id="@+id/solve_it"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/ic_button"
                    app:layout_constraintTop_toBottomOf="@id/hint_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/ninja_image"
                    android:textSize="15sp"
                    android:text="@string/solve"
                    android:textColor="#FAFAFA"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_marginBottom="20dp"
            android:src="@drawable/eraser"
            android:background="?android:attr/selectableItemBackground"
            app:layout_constraintBottom_toTopOf="@id/number_panel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/solve_card"
            android:id="@+id/eraser"/>
        <com.example.android.sudokusolver.NumberPanel
            android:id="@+id/number_panel"
            android:layout_width="match_parent"
            android:padding="0dp"
            android:layout_height="45dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="10dp"/>
    <ImageView
        android:id="@+id/image_solved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/sudoku_grid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/solved"/>
    <ImageView
        android:visibility="gone"
        android:id="@+id/image_angry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/angry"/>
    <TextView
        android:id="@+id/text_angry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/image_angry"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/no_solution"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textColor="#616161"/>
</androidx.constraintlayout.widget.ConstraintLayout>